// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Operations Visitor Should handle Query correctly 1`] = `
"package app.test.generated.graphql;

import com.apollographql.apollo.api.Query;
import java.lang.String;
import java.lang.Override;
import javax.annotation.Generated;
import com.apollographql.apollo.api.OperationName;
import com.apollographql.apollo.api.Operation;
import com.apollographql.apollo.api.ResponseFieldMapper;
import type.ModelProductFilterInput;
import java.lang.Integer;
import com.apollographql.apollo.api.ResponseField;
import javax.annotation.Nullable;
import javax.annotation.Nonnull;
import java.util.Collections;
import type.CustomType;
import com.apollographql.apollo.api.internal.Utils;
import com.apollographql.apollo.api.ResponseReader;
import com.apollographql.apollo.api.ResponseFieldMarshaller;
import com.apollographql.apollo.api.ResponseWriter;
import java.util.List;
import com.apollographql.apollo.api.internal.UnmodifiableMapBuilder;
import java.lang.Object;
import java.util.LinkedHashMap;
import java.util.Map;
import com.apollographql.apollo.api.InputFieldMarshaller;
import com.apollographql.apollo.api.InputFieldWriter;
import java.io.IOException;

@Generated("Apollo GraphQL")
public final class ListProductsQuery implements Query<ListProductsQuery.Data, ListProductsQuery.Data, ListProductsQuery.Variables> {
  public static final String OPERATION_DEFINITION = "query ListProducts($filter: ModelProductFilterInput, $limit: Int, $nextToken: String) {   listProducts(filter: $filter, limit: $limit, nextToken: $nextToken) {     items {       id       title       content       price       rating     }     nextToken   } }";
  public static final String QUERY_DOCUMENT = OPERATION_DEFINITION;
  public static final OperationName OPERATION_NAME = new OperationName() {
    @Override
    public String name() {
      return "ListProducts";
    }
  };
  private final ListProductsQuery.Variables variables;
  @Override
   public String queryDocument() {
    return QUERY_DOCUMENT;
  }
  
  @Override
   public ListProductsQuery.Data wrapData(ListProductsQuery.Data data) {
    return data;
  }
  
  @Override
   public ListProductsQuery.Variables variables() {
    return variables;
  }
  
  @Override
   public ResponseFieldMapper<ListProductsQuery.Data> responseFieldMapper() {
    return new Data.Mapper();
  }
  
  public static Builder builder() {
    return new Builder();
  }
  
  @Override
   public OperationName name() {
    return OPERATION_NAME;
  }
  
  public String operationId() {
    return "5597d12b4e13d225a0107e7713b35f7a";
  }
  
  public ListProductsQuery(@Nullable ModelProductFilterInput filter, @Nullable Integer limit, @Nullable String nextToken) {
    this.variables = new ListProductsQuery.Variables(filter, limit, nextToken);
  }
  public static class Data implements Operation.Data {
    private final @Nullable ListProducts listProducts;
    private volatile String $toString;
    private volatile int $hashCode;
    private volatile boolean $hashCodeMemoized;
    static final ResponseField[] $responseFields = {
        ResponseField.forObject("listProducts", "listProducts", new UnmodifiableMapBuilder<String, Object>(3).put("filter", new UnmodifiableMapBuilder<String, Object>(2).put("kind", "Variable").put("variableName", "filter").build()).put("limit", new UnmodifiableMapBuilder<String, Object>(2).put("kind", "Variable").put("variableName", "limit").build()).put("nextToken", new UnmodifiableMapBuilder<String, Object>(2).put("kind", "Variable").put("variableName", "nextToken").build()).build(), true, Collections.<ResponseField.Condition>emptyList())
      };
    public Data(@Nullable ListProducts listProducts) {
      this.listProducts = listProducts;
    }
    
    public @Nullable ListProducts listProducts() {
      return this.listProducts;
    }
    
    @Override
     public String toString() {
      if ($toString == null) {
        $toString = "Data{"
          + "listProducts=" + listProducts + ", "
          + "}";
      }
      
      return $toString;
    }
    
    @Override
     public boolean equals(Object o) {
      if (o == this) {
        return true;
      }
      if (o instanceof Data) {
        Data that = (Data) o;
        return ((this.listProducts == null) ? (that.listProducts == null) : this.listProducts.equals(that.listProducts));
      }
      
      return false;
    }
    
    @Override
     public int hashCode() {
      if (!$hashCodeMemoized) {
        int h = 1;
        h *= 1000003;
        h ^= (listProducts == null) ? 0 : listProducts.hashCode();
        $hashCode = h;
        $hashCodeMemoized = true;
      }
      
      return $hashCode;
    }
    
    public ResponseFieldMarshaller marshaller() {
      return new ResponseFieldMarshaller() {
        @Override
        public void marshal(ResponseWriter writer) {
          writer.writeObject($responseFields[0], listProducts != null ? listProducts.marshaller() : null);
        }
      };
    }
    public static final class Mapper implements ResponseFieldMapper<Data> {
      private final ListProducts.Mapper listProductsFieldMapper = new ListProducts.Mapper();
      @Override
       public Data map(ResponseReader reader) {
        final ListProducts listProducts = reader.readObject($responseFields[0], new ResponseReader.ObjectReader<ListProducts>() {
                  @Override
                  public ListProducts read(ResponseReader reader) {
                    return listProductsFieldMapper.map(reader);
                  }
                });
        return new Data(listProducts);
      }
    }
    
  }
  

  public static class ListProducts {
    private final @Nonnull String __typename;
    private final @Nullable List<Item> items;
    private final @Nullable String nextToken;
    private volatile String $toString;
    private volatile int $hashCode;
    private volatile boolean $hashCodeMemoized;
    static final ResponseField[] $responseFields = {
        ResponseField.forString("__typename", "__typename", null, false, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forList("items", "items", null, true, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forString("nextToken", "nextToken", null, true, Collections.<ResponseField.Condition>emptyList())
      };
    public ListProducts(@Nonnull String __typename, @Nullable List<Item> items, @Nullable String nextToken) {
      this.__typename = Utils.checkNotNull(__typename, "__typename == null");
      this.items = items;
      this.nextToken = nextToken;
    }
    
    public @Nonnull String __typename() {
      return this.__typename;
    }
    
    public @Nullable List<Item> items() {
      return this.items;
    }
    
    public @Nullable String nextToken() {
      return this.nextToken;
    }
    
    @Override
     public String toString() {
      if ($toString == null) {
        $toString = "ListProducts{"
          + "__typename=" + __typename + ", "
          + "items=" + items + ", "
          + "nextToken=" + nextToken + ", "
          + "}";
      }
      
      return $toString;
    }
    
    @Override
     public boolean equals(Object o) {
      if (o == this) {
        return true;
      }
      if (o instanceof ListProducts) {
        ListProducts that = (ListProducts) o;
        return this.__typename.equals(that.__typename) && ((this.items == null) ? (that.items == null) : this.items.equals(that.items)) && ((this.nextToken == null) ? (that.nextToken == null) : this.nextToken.equals(that.nextToken));
      }
      
      return false;
    }
    
    @Override
     public int hashCode() {
      if (!$hashCodeMemoized) {
        int h = 1;
        h *= 1000003;
        h ^= __typename.hashCode();
        h *= 1000003;
        h ^= (items == null) ? 0 : items.hashCode();
        h *= 1000003;
        h ^= (nextToken == null) ? 0 : nextToken.hashCode();
        $hashCode = h;
        $hashCodeMemoized = true;
      }
      
      return $hashCode;
    }
    
    public ResponseFieldMarshaller marshaller() {
      return new ResponseFieldMarshaller() {
        @Override
        public void marshal(ResponseWriter writer) {
          writer.writeString($responseFields[0], __typename);
          writer.writeList($responseFields[1], items, new ResponseWriter.ListWriter() {
            @Override
            public void write(Object value, ResponseWriter.ListItemWriter listItemWriter) {
              listItemWriter.writeObject(((Item) value).marshaller());
            }
          });
          writer.writeString($responseFields[2], nextToken != null ? nextToken : null);
        }
      };
    }
    public static final class Mapper implements ResponseFieldMapper<ListProducts> {
      private final Item.Mapper itemsFieldMapper = new Item.Mapper();
      @Override
       public ListProducts map(ResponseReader reader) {
        final String __typename = reader.readString($responseFields[0]);
        final List<Item> items = reader.readList($responseFields[1], new ResponseReader.ListReader<Item>() {
          @Override
          public Item read(ResponseReader.ListItemReader listItemReader) {
            return listItemReader.readObject(new ResponseReader.ObjectReader<Item>() {
                      @Override
                      public Item read(ResponseReader reader) {
                        return itemsFieldMapper.map(reader);
                      }
                    });
          }
        });
        final String nextToken = reader.readString($responseFields[2]);
        return new ListProducts(__typename, items, nextToken);
      }
    }
    
  }
  

  public static class Item {
    private final @Nonnull String __typename;
    private final @Nonnull String id;
    private final @Nonnull String title;
    private final @Nonnull String content;
    private final @Nullable Integer price;
    private final @Nullable Double rating;
    private volatile String $toString;
    private volatile int $hashCode;
    private volatile boolean $hashCodeMemoized;
    static final ResponseField[] $responseFields = {
        ResponseField.forString("__typename", "__typename", null, false, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forCustomType("id", "id", null, false, CustomType.ID, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forString("title", "title", null, false, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forString("content", "content", null, false, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forInt("price", "price", null, true, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forDouble("rating", "rating", null, true, Collections.<ResponseField.Condition>emptyList())
      };
    public Item(@Nonnull String __typename, @Nonnull String id, @Nonnull String title, @Nonnull String content, @Nullable Integer price, @Nullable Double rating) {
      this.__typename = Utils.checkNotNull(__typename, "__typename == null");
      this.id = Utils.checkNotNull(id, "id == null");
      this.title = Utils.checkNotNull(title, "title == null");
      this.content = Utils.checkNotNull(content, "content == null");
      this.price = price;
      this.rating = rating;
    }
    
    public @Nonnull String __typename() {
      return this.__typename;
    }
    
    public @Nonnull String id() {
      return this.id;
    }
    
    public @Nonnull String title() {
      return this.title;
    }
    
    public @Nonnull String content() {
      return this.content;
    }
    
    public @Nullable Integer price() {
      return this.price;
    }
    
    public @Nullable Double rating() {
      return this.rating;
    }
    
    @Override
     public String toString() {
      if ($toString == null) {
        $toString = "Item{"
          + "__typename=" + __typename + ", "
          + "id=" + id + ", "
          + "title=" + title + ", "
          + "content=" + content + ", "
          + "price=" + price + ", "
          + "rating=" + rating + ", "
          + "}";
      }
      
      return $toString;
    }
    
    @Override
     public boolean equals(Object o) {
      if (o == this) {
        return true;
      }
      if (o instanceof Item) {
        Item that = (Item) o;
        return this.__typename.equals(that.__typename) && this.id.equals(that.id) && this.title.equals(that.title) && this.content.equals(that.content) && ((this.price == null) ? (that.price == null) : this.price.equals(that.price)) && ((this.rating == null) ? (that.rating == null) : this.rating.equals(that.rating));
      }
      
      return false;
    }
    
    @Override
     public int hashCode() {
      if (!$hashCodeMemoized) {
        int h = 1;
        h *= 1000003;
        h ^= __typename.hashCode();
        h *= 1000003;
        h ^= id.hashCode();
        h *= 1000003;
        h ^= title.hashCode();
        h *= 1000003;
        h ^= content.hashCode();
        h *= 1000003;
        h ^= (price == null) ? 0 : price.hashCode();
        h *= 1000003;
        h ^= (rating == null) ? 0 : rating.hashCode();
        $hashCode = h;
        $hashCodeMemoized = true;
      }
      
      return $hashCode;
    }
    
    public ResponseFieldMarshaller marshaller() {
      return new ResponseFieldMarshaller() {
        @Override
        public void marshal(ResponseWriter writer) {
          writer.writeString($responseFields[0], __typename);
          writer.writeCustom((ResponseField.CustomTypeField) $responseFields[1], id);
          writer.writeString($responseFields[2], title);
          writer.writeString($responseFields[3], content);
          writer.writeInt($responseFields[4], price != null ? price : null);
          writer.writeDouble($responseFields[5], rating != null ? rating : null);
        }
      };
    }
    public static final class Mapper implements ResponseFieldMapper<Item> {
      @Override
       public Item map(ResponseReader reader) {
        final String __typename = reader.readString($responseFields[0]);
        final String id = reader.readCustomType((ResponseField.CustomTypeField) $responseFields[1]);
        final String title = reader.readString($responseFields[2]);
        final String content = reader.readString($responseFields[3]);
        final Integer price = reader.readInt($responseFields[4]);
        final Double rating = reader.readDouble($responseFields[5]);
        return new Item(__typename, id, title, content, price, rating);
      }
    }
    
  }
  

  public static final class Builder {
    private @Nullable ModelProductFilterInput filter;
    private @Nullable Integer limit;
    private @Nullable String nextToken;
    Builder() {
      
    }
    
    public Builder filter(@Nullable ModelProductFilterInput filter) {
      this.filter = filter;
      return this;
    }
    
    public Builder limit(@Nullable Integer limit) {
      this.limit = limit;
      return this;
    }
    
    public Builder nextToken(@Nullable String nextToken) {
      this.nextToken = nextToken;
      return this;
    }
    
    public ListProductsQuery build() {
      return new ListProductsQuery(filter, limit, nextToken);
    }
  }
  

  public static final class Variables extends Operation.Variables {
    private @Nonnull ModelProductFilterInput filter;
    private @Nonnull Integer limit;
    private @Nonnull String nextToken;
    private final transient Map<String, Object> valueMap = new LinkedHashMap<>();
    public ModelProductFilterInput filter() {
      return filter;
    }
    
    public Integer limit() {
      return limit;
    }
    
    public String nextToken() {
      return nextToken;
    }
    
    public Variables(@Nonnull ModelProductFilterInput filter, @Nonnull Integer limit, @Nonnull String nextToken) {
      this.filter = filter;
      this.valueMap.put("filter", filter);
      this.limit = limit;
      this.valueMap.put("limit", limit);
      this.nextToken = nextToken;
      this.valueMap.put("nextToken", nextToken);
    }
    
    @Override
     public Map<String, Object> valueMap() {
      return Collections.unmodifiableMap(valueMap);
    }
    
    @Override
     public InputFieldMarshaller marshaller() {
      return new InputFieldMarshaller() {
        @Override
        public void marshal(InputFieldWriter writer) throws IOException {
          writer.writeObject("filter", filter != null ? filter.marshaller() : null);
          writer.writeInt("limit", limit);
          writer.writeString("nextToken", nextToken);
        }
      };
    }
  }
  
}

"
`;

exports[`Operations Visitor Should handle Query correctly with fragments 1`] = `
"package fragment;

import com.apollographql.apollo.api.Query;
import java.lang.String;
import java.lang.Override;
import javax.annotation.Generated;
import com.apollographql.apollo.api.OperationName;
import com.apollographql.apollo.api.Operation;
import com.apollographql.apollo.api.ResponseFieldMapper;
import type.ModelProductFilterInput;
import java.lang.Integer;
import com.apollographql.apollo.api.ResponseField;
import javax.annotation.Nullable;
import fragment.ProductFields;
import fragment.ProductFields2;
import javax.annotation.Nonnull;
import java.util.Arrays;
import com.apollographql.apollo.api.internal.Utils;
import com.apollographql.apollo.api.ResponseReader;
import com.apollographql.apollo.api.ResponseFieldMarshaller;
import com.apollographql.apollo.api.ResponseWriter;
import com.apollographql.apollo.api.FragmentResponseFieldMapper;
import java.util.Collections;
import java.util.List;
import com.apollographql.apollo.api.internal.UnmodifiableMapBuilder;
import java.lang.Object;
import java.util.LinkedHashMap;
import java.util.Map;
import com.apollographql.apollo.api.InputFieldMarshaller;
import com.apollographql.apollo.api.InputFieldWriter;
import java.io.IOException;
import com.apollographql.apollo.api.GraphqlFragment;
import type.CustomType;

@Generated("Apollo GraphQL")
public final class ListProductsQuery implements Query<ListProductsQuery.Data, ListProductsQuery.Data, ListProductsQuery.Variables> {
  public static final String OPERATION_DEFINITION = "query ListProducts($filter: ModelProductFilterInput, $limit: Int, $nextToken: String) {   listProducts(filter: $filter, limit: $limit, nextToken: $nextToken) {     items {       ...ProductFields       ...ProductFields2     }     nextToken   } }";
  public static final String QUERY_DOCUMENT = OPERATION_DEFINITION;
  public static final OperationName OPERATION_NAME = new OperationName() {
    @Override
    public String name() {
      return "ListProducts";
    }
  };
  private final ListProductsQuery.Variables variables;
  @Override
   public String queryDocument() {
    return QUERY_DOCUMENT;
  }
  
  @Override
   public ListProductsQuery.Data wrapData(ListProductsQuery.Data data) {
    return data;
  }
  
  @Override
   public ListProductsQuery.Variables variables() {
    return variables;
  }
  
  @Override
   public ResponseFieldMapper<ListProductsQuery.Data> responseFieldMapper() {
    return new Data.Mapper();
  }
  
  public static Builder builder() {
    return new Builder();
  }
  
  @Override
   public OperationName name() {
    return OPERATION_NAME;
  }
  
  public String operationId() {
    return "3d73f8740686dce349e37868c42a4d69";
  }
  
  public ListProductsQuery(@Nullable ModelProductFilterInput filter, @Nullable Integer limit, @Nullable String nextToken) {
    this.variables = new ListProductsQuery.Variables(filter, limit, nextToken);
  }
  public static class Data implements Operation.Data {
    private final @Nullable ListProducts listProducts;
    private volatile String $toString;
    private volatile int $hashCode;
    private volatile boolean $hashCodeMemoized;
    static final ResponseField[] $responseFields = {
        ResponseField.forObject("listProducts", "listProducts", new UnmodifiableMapBuilder<String, Object>(3).put("filter", new UnmodifiableMapBuilder<String, Object>(2).put("kind", "Variable").put("variableName", "filter").build()).put("limit", new UnmodifiableMapBuilder<String, Object>(2).put("kind", "Variable").put("variableName", "limit").build()).put("nextToken", new UnmodifiableMapBuilder<String, Object>(2).put("kind", "Variable").put("variableName", "nextToken").build()).build(), true, Collections.<ResponseField.Condition>emptyList())
      };
    public Data(@Nullable ListProducts listProducts) {
      this.listProducts = listProducts;
    }
    
    public @Nullable ListProducts listProducts() {
      return this.listProducts;
    }
    
    @Override
     public String toString() {
      if ($toString == null) {
        $toString = "Data{"
          + "listProducts=" + listProducts + ", "
          + "}";
      }
      
      return $toString;
    }
    
    @Override
     public boolean equals(Object o) {
      if (o == this) {
        return true;
      }
      if (o instanceof Data) {
        Data that = (Data) o;
        return ((this.listProducts == null) ? (that.listProducts == null) : this.listProducts.equals(that.listProducts));
      }
      
      return false;
    }
    
    @Override
     public int hashCode() {
      if (!$hashCodeMemoized) {
        int h = 1;
        h *= 1000003;
        h ^= (listProducts == null) ? 0 : listProducts.hashCode();
        $hashCode = h;
        $hashCodeMemoized = true;
      }
      
      return $hashCode;
    }
    
    public ResponseFieldMarshaller marshaller() {
      return new ResponseFieldMarshaller() {
        @Override
        public void marshal(ResponseWriter writer) {
          writer.writeObject($responseFields[0], listProducts != null ? listProducts.marshaller() : null);
        }
      };
    }
    public static final class Mapper implements ResponseFieldMapper<Data> {
      private final ListProducts.Mapper listProductsFieldMapper = new ListProducts.Mapper();
      @Override
       public Data map(ResponseReader reader) {
        final ListProducts listProducts = reader.readObject($responseFields[0], new ResponseReader.ObjectReader<ListProducts>() {
                  @Override
                  public ListProducts read(ResponseReader reader) {
                    return listProductsFieldMapper.map(reader);
                  }
                });
        return new Data(listProducts);
      }
    }
    
  }
  

  public static class ListProducts {
    private final @Nonnull String __typename;
    private final @Nullable List<Item> items;
    private final @Nullable String nextToken;
    private volatile String $toString;
    private volatile int $hashCode;
    private volatile boolean $hashCodeMemoized;
    static final ResponseField[] $responseFields = {
        ResponseField.forString("__typename", "__typename", null, false, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forList("items", "items", null, true, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forString("nextToken", "nextToken", null, true, Collections.<ResponseField.Condition>emptyList())
      };
    public ListProducts(@Nonnull String __typename, @Nullable List<Item> items, @Nullable String nextToken) {
      this.__typename = Utils.checkNotNull(__typename, "__typename == null");
      this.items = items;
      this.nextToken = nextToken;
    }
    
    public @Nonnull String __typename() {
      return this.__typename;
    }
    
    public @Nullable List<Item> items() {
      return this.items;
    }
    
    public @Nullable String nextToken() {
      return this.nextToken;
    }
    
    @Override
     public String toString() {
      if ($toString == null) {
        $toString = "ListProducts{"
          + "__typename=" + __typename + ", "
          + "items=" + items + ", "
          + "nextToken=" + nextToken + ", "
          + "}";
      }
      
      return $toString;
    }
    
    @Override
     public boolean equals(Object o) {
      if (o == this) {
        return true;
      }
      if (o instanceof ListProducts) {
        ListProducts that = (ListProducts) o;
        return this.__typename.equals(that.__typename) && ((this.items == null) ? (that.items == null) : this.items.equals(that.items)) && ((this.nextToken == null) ? (that.nextToken == null) : this.nextToken.equals(that.nextToken));
      }
      
      return false;
    }
    
    @Override
     public int hashCode() {
      if (!$hashCodeMemoized) {
        int h = 1;
        h *= 1000003;
        h ^= __typename.hashCode();
        h *= 1000003;
        h ^= (items == null) ? 0 : items.hashCode();
        h *= 1000003;
        h ^= (nextToken == null) ? 0 : nextToken.hashCode();
        $hashCode = h;
        $hashCodeMemoized = true;
      }
      
      return $hashCode;
    }
    
    public ResponseFieldMarshaller marshaller() {
      return new ResponseFieldMarshaller() {
        @Override
        public void marshal(ResponseWriter writer) {
          writer.writeString($responseFields[0], __typename);
          writer.writeList($responseFields[1], items, new ResponseWriter.ListWriter() {
            @Override
            public void write(Object value, ResponseWriter.ListItemWriter listItemWriter) {
              listItemWriter.writeObject(((Item) value).marshaller());
            }
          });
          writer.writeString($responseFields[2], nextToken != null ? nextToken : null);
        }
      };
    }
    public static final class Mapper implements ResponseFieldMapper<ListProducts> {
      private final Item.Mapper itemsFieldMapper = new Item.Mapper();
      @Override
       public ListProducts map(ResponseReader reader) {
        final String __typename = reader.readString($responseFields[0]);
        final List<Item> items = reader.readList($responseFields[1], new ResponseReader.ListReader<Item>() {
          @Override
          public Item read(ResponseReader.ListItemReader listItemReader) {
            return listItemReader.readObject(new ResponseReader.ObjectReader<Item>() {
                      @Override
                      public Item read(ResponseReader reader) {
                        return itemsFieldMapper.map(reader);
                      }
                    });
          }
        });
        final String nextToken = reader.readString($responseFields[2]);
        return new ListProducts(__typename, items, nextToken);
      }
    }
    
  }
  

  public static class Item {
    private final @Nonnull String __typename;
    private final @Nonnull Fragments fragments;
    private volatile String $toString;
    private volatile int $hashCode;
    private volatile boolean $hashCodeMemoized;
    static final ResponseField[] $responseFields = {
        ResponseField.forString("__typename", "__typename", null, false, Collections.<ResponseField.Condition>emptyList()),
        ResponseField.forFragment("__typename", "__typename", Arrays.asList("Product", "Product"))
      };
    public Item(@Nonnull String __typename, @Nonnull Fragments fragments) {
      this.__typename = Utils.checkNotNull(__typename, "__typename == null");
      this.fragments = Utils.checkNotNull(fragments, "fragments == null");
    }
    
    public @Nonnull String __typename() {
      return this.__typename;
    }
    
    public @Nonnull Fragments fragments() {
      return this.fragments;
    }
    
    @Override
     public String toString() {
      if ($toString == null) {
        $toString = "Item{"
          + "__typename=" + __typename + ", "
          + "fragments=" + fragments + ", "
          + "}";
      }
      
      return $toString;
    }
    
    @Override
     public boolean equals(Object o) {
      if (o == this) {
        return true;
      }
      if (o instanceof Item) {
        Item that = (Item) o;
        return this.__typename.equals(that.__typename) && this.fragments.equals(that.fragments);
      }
      
      return false;
    }
    
    @Override
     public int hashCode() {
      if (!$hashCodeMemoized) {
        int h = 1;
        h *= 1000003;
        h ^= __typename.hashCode();
        h *= 1000003;
        h ^= fragments.hashCode();
        $hashCode = h;
        $hashCodeMemoized = true;
      }
      
      return $hashCode;
    }
    
    public ResponseFieldMarshaller marshaller() {
      return new ResponseFieldMarshaller() {
        @Override
        public void marshal(ResponseWriter writer) {
          writer.writeString($responseFields[0], __typename);
          writer.writeObject($responseFields[1], fragments != null ? fragments.marshaller() : null);
        }
      };
    }
    public static final class Fragments {
      private final @Nonnull ProductFields productFields;
      private final @Nonnull ProductFields2 productFields2;
      private volatile String $toString;
      private volatile int $hashCode;
      private volatile boolean $hashCodeMemoized;
      public Fragments(@Nonnull ProductFields productFields, @Nonnull ProductFields2 productFields2) {
        this.productFields = Utils.checkNotNull(productFields, "productFields == null");
        this.productFields2 = Utils.checkNotNull(productFields2, "productFields2 == null");
      }
      
      public @Nonnull ProductFields productFields() {
        return this.productFields;
      }
      
      public @Nonnull ProductFields2 productFields2() {
        return this.productFields2;
      }
      
      public ResponseFieldMarshaller marshaller() {
        return new ResponseFieldMarshaller() {
          @Override
          public void marshal(ResponseWriter writer) {
            final ProductFields $productFields = productFields;
            if ($productFields != null) { $productFields.marshaller().marshal(writer); }
            final ProductFields2 $productFields2 = productFields2;
            if ($productFields2 != null) { $productFields2.marshaller().marshal(writer); }
          }
        };
              
      }
      
      @Override
       public String toString() {
        if ($toString == null) {
            $toString = "Fragments{"
              + "productFields=" + productFields + ", "
            + "productFields2=" + productFields2 + ", "
              + "}";
          }
          
          return $toString;
      }
      
      @Override
       public boolean equals(Object o) {
        if (o == this) {
            return true;
          }
          if (o instanceof Fragments) {
            Fragments that = (Fragments) o;
            return this.productFields.equals(that.productFields) && this.productFields2.equals(that.productFields2);
          }
          
          return false;
      }
      
      @Override
       public int hashCode() {
        if (!$hashCodeMemoized) {
            int h = 1;
            h *= 1000003;
          h ^= productFields.hashCode();
          h *= 1000003;
          h ^= productFields2.hashCode();
            $hashCode = h;
            $hashCodeMemoized = true;
          }
          
          return $hashCode;
      }
      public static final class Mapper implements FragmentResponseFieldMapper<Fragments> {
        private final ProductFields.Mapper productFieldsFieldMapper = new ProductFields.Mapper();
        private final ProductFields2.Mapper productFields2FieldMapper = new ProductFields2.Mapper();
        @Override
         public @Nonnull Fragments map(ResponseReader reader, @Nonnull String conditionalType) {
          
          ProductFields productFields = null;
          if (ProductFields.POSSIBLE_TYPES.contains(conditionalType)) {
            productFields = productFieldsFieldMapper.map(reader);
          }
          ProductFields2 productFields2 = null;
          if (ProductFields2.POSSIBLE_TYPES.contains(conditionalType)) {
            productFields2 = productFields2FieldMapper.map(reader);
          }
          
          return new Fragments(Utils.checkNotNull(productFields, "productFields == null"), Utils.checkNotNull(productFields2, "productFields2 == null"));
                
        }
      }
      
    }
    
  
    public static final class Mapper implements ResponseFieldMapper<Item> {
      private final Fragments.Mapper fragmentsFieldMapper = new Fragments.Mapper();
      @Override
       public Item map(ResponseReader reader) {
        final String __typename = reader.readString($responseFields[0]);
        final Fragments fragments = reader.readConditional($responseFields[1], new ResponseReader.ConditionalTypeReader<Fragments>() {
                  @Override
                  public Fragments read(String conditionalType, ResponseReader reader) {
                    return fragmentsFieldMapper.map(reader, conditionalType);
                  }
                });
        return new Item(__typename, fragments);
      }
    }
    
  }
  

  public static final class Builder {
    private @Nullable ModelProductFilterInput filter;
    private @Nullable Integer limit;
    private @Nullable String nextToken;
    Builder() {
      
    }
    
    public Builder filter(@Nullable ModelProductFilterInput filter) {
      this.filter = filter;
      return this;
    }
    
    public Builder limit(@Nullable Integer limit) {
      this.limit = limit;
      return this;
    }
    
    public Builder nextToken(@Nullable String nextToken) {
      this.nextToken = nextToken;
      return this;
    }
    
    public ListProductsQuery build() {
      return new ListProductsQuery(filter, limit, nextToken);
    }
  }
  

  public static final class Variables extends Operation.Variables {
    private @Nonnull ModelProductFilterInput filter;
    private @Nonnull Integer limit;
    private @Nonnull String nextToken;
    private final transient Map<String, Object> valueMap = new LinkedHashMap<>();
    public ModelProductFilterInput filter() {
      return filter;
    }
    
    public Integer limit() {
      return limit;
    }
    
    public String nextToken() {
      return nextToken;
    }
    
    public Variables(@Nonnull ModelProductFilterInput filter, @Nonnull Integer limit, @Nonnull String nextToken) {
      this.filter = filter;
      this.valueMap.put("filter", filter);
      this.limit = limit;
      this.valueMap.put("limit", limit);
      this.nextToken = nextToken;
      this.valueMap.put("nextToken", nextToken);
    }
    
    @Override
     public Map<String, Object> valueMap() {
      return Collections.unmodifiableMap(valueMap);
    }
    
    @Override
     public InputFieldMarshaller marshaller() {
      return new InputFieldMarshaller() {
        @Override
        public void marshal(InputFieldWriter writer) throws IOException {
          writer.writeObject("filter", filter != null ? filter.marshaller() : null);
          writer.writeInt("limit", limit);
          writer.writeString("nextToken", nextToken);
        }
      };
    }
  }
  
}

public class ProductFields implements GraphqlFragment {
  private final @Nonnull String __typename;
  private final @Nonnull String id;
  private final @Nonnull String title;
  private final @Nonnull String content;
  private final @Nullable Integer price;
  private final @Nullable Double rating;
  private volatile String $toString;
  private volatile int $hashCode;
  private volatile boolean $hashCodeMemoized;
  static final ResponseField[] $responseFields = {
      ResponseField.forString("__typename", "__typename", null, false, Collections.<ResponseField.Condition>emptyList()),
      ResponseField.forCustomType("id", "id", null, false, CustomType.ID, Collections.<ResponseField.Condition>emptyList()),
      ResponseField.forString("title", "title", null, false, Collections.<ResponseField.Condition>emptyList()),
      ResponseField.forString("content", "content", null, false, Collections.<ResponseField.Condition>emptyList()),
      ResponseField.forInt("price", "price", null, true, Collections.<ResponseField.Condition>emptyList()),
      ResponseField.forDouble("rating", "rating", null, true, Collections.<ResponseField.Condition>emptyList())
    };
  public static final String FRAGMENT_DEFINITION = "fragment ProductFields on Product {   id   title   content   price   rating }";
  public static final List<String> POSSIBLE_TYPES = Collections.unmodifiableList(Arrays.asList("Product"));
  public ProductFields(@Nonnull String __typename, @Nonnull String id, @Nonnull String title, @Nonnull String content, @Nullable Integer price, @Nullable Double rating) {
    this.__typename = Utils.checkNotNull(__typename, "__typename == null");
    this.id = Utils.checkNotNull(id, "id == null");
    this.title = Utils.checkNotNull(title, "title == null");
    this.content = Utils.checkNotNull(content, "content == null");
    this.price = price;
    this.rating = rating;
  }
  
  public @Nonnull String __typename() {
    return this.__typename;
  }
  
  public @Nonnull String id() {
    return this.id;
  }
  
  public @Nonnull String title() {
    return this.title;
  }
  
  public @Nonnull String content() {
    return this.content;
  }
  
  public @Nullable Integer price() {
    return this.price;
  }
  
  public @Nullable Double rating() {
    return this.rating;
  }
  
  @Override
   public String toString() {
    if ($toString == null) {
      $toString = "ProductFields{"
        + "__typename=" + __typename + ", "
        + "id=" + id + ", "
        + "title=" + title + ", "
        + "content=" + content + ", "
        + "price=" + price + ", "
        + "rating=" + rating + ", "
        + "}";
    }
    
    return $toString;
  }
  
  @Override
   public boolean equals(Object o) {
    if (o == this) {
      return true;
    }
    if (o instanceof ProductFields) {
      ProductFields that = (ProductFields) o;
      return this.__typename.equals(that.__typename) && this.id.equals(that.id) && this.title.equals(that.title) && this.content.equals(that.content) && ((this.price == null) ? (that.price == null) : this.price.equals(that.price)) && ((this.rating == null) ? (that.rating == null) : this.rating.equals(that.rating));
    }
    
    return false;
  }
  
  @Override
   public int hashCode() {
    if (!$hashCodeMemoized) {
      int h = 1;
      h *= 1000003;
      h ^= __typename.hashCode();
      h *= 1000003;
      h ^= id.hashCode();
      h *= 1000003;
      h ^= title.hashCode();
      h *= 1000003;
      h ^= content.hashCode();
      h *= 1000003;
      h ^= (price == null) ? 0 : price.hashCode();
      h *= 1000003;
      h ^= (rating == null) ? 0 : rating.hashCode();
      $hashCode = h;
      $hashCodeMemoized = true;
    }
    
    return $hashCode;
  }
  
  public ResponseFieldMarshaller marshaller() {
    return new ResponseFieldMarshaller() {
      @Override
      public void marshal(ResponseWriter writer) {
        writer.writeString($responseFields[0], __typename);
        writer.writeCustom((ResponseField.CustomTypeField) $responseFields[1], id);
        writer.writeString($responseFields[2], title);
        writer.writeString($responseFields[3], content);
        writer.writeInt($responseFields[4], price != null ? price : null);
        writer.writeDouble($responseFields[5], rating != null ? rating : null);
      }
    };
  }
  public static final class Mapper implements ResponseFieldMapper<ProductFields> {
    @Override
     public ProductFields map(ResponseReader reader) {
      final String __typename = reader.readString($responseFields[0]);
      final String id = reader.readCustomType((ResponseField.CustomTypeField) $responseFields[1]);
      final String title = reader.readString($responseFields[2]);
      final String content = reader.readString($responseFields[3]);
      final Integer price = reader.readInt($responseFields[4]);
      final Double rating = reader.readDouble($responseFields[5]);
      return new ProductFields(__typename, id, title, content, price, rating);
    }
  }
  
}

public class ProductFields2 implements GraphqlFragment {
  private final @Nonnull String __typename;
  private final @Nonnull String title;
  private final @Nonnull String content;
  private volatile String $toString;
  private volatile int $hashCode;
  private volatile boolean $hashCodeMemoized;
  static final ResponseField[] $responseFields = {
      ResponseField.forString("__typename", "__typename", null, false, Collections.<ResponseField.Condition>emptyList()),
      ResponseField.forString("title", "title", null, false, Collections.<ResponseField.Condition>emptyList()),
      ResponseField.forString("content", "content", null, false, Collections.<ResponseField.Condition>emptyList())
    };
  public static final String FRAGMENT_DEFINITION = "fragment ProductFields2 on Product {   title   content }";
  public static final List<String> POSSIBLE_TYPES = Collections.unmodifiableList(Arrays.asList("Product"));
  public ProductFields2(@Nonnull String __typename, @Nonnull String title, @Nonnull String content) {
    this.__typename = Utils.checkNotNull(__typename, "__typename == null");
    this.title = Utils.checkNotNull(title, "title == null");
    this.content = Utils.checkNotNull(content, "content == null");
  }
  
  public @Nonnull String __typename() {
    return this.__typename;
  }
  
  public @Nonnull String title() {
    return this.title;
  }
  
  public @Nonnull String content() {
    return this.content;
  }
  
  @Override
   public String toString() {
    if ($toString == null) {
      $toString = "ProductFields2{"
        + "__typename=" + __typename + ", "
        + "title=" + title + ", "
        + "content=" + content + ", "
        + "}";
    }
    
    return $toString;
  }
  
  @Override
   public boolean equals(Object o) {
    if (o == this) {
      return true;
    }
    if (o instanceof ProductFields2) {
      ProductFields2 that = (ProductFields2) o;
      return this.__typename.equals(that.__typename) && this.title.equals(that.title) && this.content.equals(that.content);
    }
    
    return false;
  }
  
  @Override
   public int hashCode() {
    if (!$hashCodeMemoized) {
      int h = 1;
      h *= 1000003;
      h ^= __typename.hashCode();
      h *= 1000003;
      h ^= title.hashCode();
      h *= 1000003;
      h ^= content.hashCode();
      $hashCode = h;
      $hashCodeMemoized = true;
    }
    
    return $hashCode;
  }
  
  public ResponseFieldMarshaller marshaller() {
    return new ResponseFieldMarshaller() {
      @Override
      public void marshal(ResponseWriter writer) {
        writer.writeString($responseFields[0], __typename);
        writer.writeString($responseFields[1], title);
        writer.writeString($responseFields[2], content);
      }
    };
  }
  public static final class Mapper implements ResponseFieldMapper<ProductFields2> {
    @Override
     public ProductFields2 map(ResponseReader reader) {
      final String __typename = reader.readString($responseFields[0]);
      final String title = reader.readString($responseFields[1]);
      final String content = reader.readString($responseFields[2]);
      return new ProductFields2(__typename, title, content);
    }
  }
  
}

"
`;
